--- a/vk_stats/html/stats_item_inactive.html
+++ b/vk_stats/html/stats_item_inactive.html
@@ -1,4 +1,4 @@
         <tr>
-            <td>{first_name} {last_name}</td>
-            <td>{0}</td>
+            <td>{0}. {first_name} {last_name}</td>
+            <td>{1}</td>
         </tr>
