--- a/vk_stats/html/stats_item.html
+++ b/vk_stats/html/stats_item.html
@@ -1,4 +1,4 @@
         <tr>
-            <td><a href="https://vk.com/{screen_name}">{first_name} {last_name}</a></td>
-            <td>{0}</td>
+            <td><a href="https://vk.com/{screen_name}">{0}. {first_name} {last_name}</a></td>
+            <td>{1}</td>
         </tr>
